# capi

./: CMakeLists.txt  README.md
assert/: my_assert_1.c  my_assert_2.c
ctype/: my_ctype_1.c
limits/: my_limits_1.c
stdio/: my_stdio_fgetc.c  my_stdio_fgets.c  my_stdio_fopen.c  my_stdio_freopen.c  my_stdio_read_1.c  my_stdio_write_1.c
stdio/resource/: read_1.txt  write_1.txt
time/: my_time_1.c
